[gd_scene load_steps=4 format=3 uid="uid://djy1ltinuio1p"]

[ext_resource type="Script" path="res://scripts/Orb.gd" id="1_kl67p"]
[ext_resource type="Texture2D" uid="uid://bw272uyo34scv" path="res://assets/BlueOrb.png" id="3_08l6p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e873u"]
radius = 22.0

[node name="Orb" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_kl67p")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_08l6p")
offset = Vector2(-7, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_e873u")

[node name="WaitingToTravel" type="Timer" parent="."]
wait_time = 10.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="timeout" from="WaitingToTravel" to="." method="_on_waiting_to_travel_timeout"]
